discussion/kv_engine/173507/173507_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add SnapshotRequirements and checks

RangeScans can be created with optional parameters that state a
vbucket uuid and sequence number.

This commit adds:

* in-memory uuid check on the frontend worker, failing the create
  with "not_my_vbucket"
* snapshot "must-contain" seqno check in the I/O task (optional at
  the request of the caller).

A future commit will add checks that the seqno was at least persisted
with a wait+timeout if not.

Change-Id: I5b03fadbe2cece10195ba2313e2619d11674fbfe

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-19 15:44:34.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-19 17:26:24.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45362/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [49/93]: test full rollback on consumer...(109 ms) OK


99% tests passed, 1 tests failed out of 424

Total Test time (real) = 359.70 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45362/ )

Timeout of a CTest test 424/424 Test #289: ep_testsuite_dcp.value_eviction.comp_passive ............................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45362/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16745/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:20:5: error: unknown type name "uint64_t" [clang-diagnostic-error]
    uint64_t vbUuid{0};
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:22:5: error: unknown type name "uint64_t" [clang-diagnostic-error]
    uint64_t seqno{0};
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16745/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/range_scan_optional_configuration.h:20:5:
error: unknown type name "uint64_t" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16745/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18523/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-19T16:05:21.160Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-19T16:05:21.160Z] Expected equality of these values:
[2022-04-19T16:05:21.160Z]   100
[2022-04-19T16:05:21.160Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-19T16:05:21.160Z]     Which is: 95
[2022-04-19T16:05:21.160Z] vb:0 not fully resident after eviction
[2022-04-19T16:05:21.160Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-19T16:05:21.160Z] Expected equality of these values:
[2022-04-19T16:05:21.160Z]   100
[2022-04-19T16:05:21.160Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-19T16:05:21.160Z]     Which is: 97
[2022-04-19T16:05:21.160Z] vb:1 not fully resident after eviction
[2022-04-19T16:05:21.160Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (310 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18523/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26928/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18860/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-19T15:59:52.204Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-19T15:59:52.204Z] Expected equality of these values:
[2022-04-19T15:59:52.204Z]   100
[2022-04-19T15:59:52.204Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-19T15:59:52.204Z]     Which is: 95
[2022-04-19T15:59:52.204Z] vb:0 not fully resident after eviction
[2022-04-19T15:59:52.204Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-19T15:59:52.204Z] Expected equality of these values:
[2022-04-19T15:59:52.204Z]   100
[2022-04-19T15:59:52.204Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-19T15:59:52.204Z]     Which is: 97
[2022-04-19T15:59:52.204Z] vb:1 not fully resident after eviction
[2022-04-19T15:59:52.204Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (755 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18860/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38104/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15678/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17619/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6399/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6462/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19562/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
